# pe-analyzer

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  deploy.yml  run_analysis.yml
pe_analyzer/: __main__.py  exceptions.py  file_analyzer.py  file_storage.py  metadata_processor.py  s3_handler.py  schema.py  settings.py  task_provider.py
pe_analyzer/core/: file_analyzer.py  metadata_processor.py  schema.py  utils.py
pe_analyzer/db/: connector.py  db.py  models.py
pe_analyzer/db/migrations/: env.py
pe_analyzer/db/migrations/versions/: 4801596247a5_initial_commit.py  4b50f5396ee1_nullable_columns.py  a17cab59bdaa_index_on_path.py
pe_analyzer/file_analysis/: base.py  exceptions.py  pe_file_handler.py
pe_analyzer/file_storage/: base.py  s3.py
pe_analyzer/task_provider/: base.py  cmd_task.py
scripts/: entrypoint.sh
spark/: Dockerfile
tests/core/: test_file_analyzer.py
tests/file_analysis/: test_pe_file_handler.py
tests/file_storage/: test_s3.py
tests/task_provider/: test_cmd_task.py
