[tool.poetry]
name = "nord-security-task"
version = "0.1.0"
description = "Task for interview process in Nord Security"
authors = ["Abror Ruziboev <abror.ruzibayev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.31"
pyspark = "^3.5.1"
pydantic-settings = "^2.3.4"
alembic = "^1.13.2"
boto3 = "^1.34.145"
pefile = "^2023.2.7"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
ruff = "^0.5.3"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
venvPath = "."
venv = ".venv"
# strict = ["*"]
